--- a/templates/index.html
+++ b/templates/index.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Word to PDF Splitter</title>
+    <title>Slice2PDF - Split Word to PDF</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
 </head>
 <body>
     <div class="container">
         <header>
-            <h1>📄 Word to PDF Splitter</h1>
+            <h1>📄 Slice2PDF</h1>
             <p>Upload a Word document and split it into multiple PDF files</p>
         </header>
 
